MITAB Library - Revision History
================================


CHANGES - Current Version:
--------------------------

- Treat Region as MultiPolygon in mitab_c_set_point() to support Regions
  with multiple islands and holes. Passing a part number <= 0 (second 
  parameter in mitab_c_set_point()) will result in adding a new island 
  (i.e. polygon).  By default, parts > 1 are treated as holes in the
  last island (polygon) that was created.

- Added IsInteriorRing() function in the TABRegion class to validate if a ring 
  in a polygon is an external or an internal ring. The function return true if 
  the specified ring is an interior ring. The function 
  mitab_c_is_interior_ring() in mitab_capi.c have been created too to  call 
  IsInteriorRing() if the feature is a region.


Version 1.2.1 - (2002-05-08)
----------------------------

- Implement SetMIFCoordSys in the MIFFile class. The coordsys was not 
  written when calling mitab_c_create for MIF files because 
  MIFFile::SetMIFCoordSys always returned -1 (Bug 984).

- Added support for TABFC_FontPoint and TABFC_CustomPoint in
  mitab_c_create_feature(), mitab_c_set_points(), mitab_c_set_font() and 
  mitab_c_get_font().

- mitab_capi.h: Use stdcall by default for all public mitab.dll functions
  instead of cdecl.  Should still work fine for C/C++ users, and will
  allow VB/Delphi users to use the same DLL with Bo T.'s interface files.


Version 1.2.0 - (2002-05-03)
----------------------------

- Made changes in TABRelation to avoid an infinite loop. The m_poCurFeature
  object have been deleted and the function GetFeatureRef() have been replace
  by GetFeature(). This new function return a TABFeature object that must be 
  control by the calling method. (bug 706)

- Made important changes in order to support writing objects in 16 bits 
  coordinate format. New TABMAPObjHdr-derived classes are used to hold 
  object info in memory until block is full. 